[metadata]
name = ament_lint_pre_commit_hooks
version = 0.0.0
description = Some out-of-the-box hooks for ament lint pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leander-dsouza/ament-lint-pre-commit-hooks
author = Leander Stephen Desouza
author_email = leanderdsouza1234@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    docker
    pydocstyle
python_requires = >=3.9

[options.entry_points]
console_scripts =
    ament_lint_cmake_hook = ament_lint_pre_commit_hooks.ament_lint_cmake_hook:main
    ament_cpplint_hook = ament_lint_pre_commit_hooks.ament_cpplint_hook:main
    ament_uncrustify_hook = ament_lint_pre_commit_hooks.ament_uncrustify_hook:main
    ament_xmllint_hook = ament_lint_pre_commit_hooks.ament_xmllint_hook:main
    ament_flake8_hook = ament_lint_pre_commit_hooks.ament_flake8_hook:main
    ament_pep257_hook = ament_lint_pre_commit_hooks.ament_pep257_hook:main
