[metadata]
name = ament_lint_pre_commit_hooks
version = 1.0.0
description = Some out-of-the-box hooks for ament lint pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leander-dsouza/ament-lint-pre-commit-hooks.git
author = Leander Stephen Desouza
author_email = leanderdsouza1234@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = ament_lint_pre_commit_hooks
install_requires =
    docker
    pydocstyle
python_requires = >=3.10

[options.entry_points]
console_scripts =
    ament_cpplint = ament_lint_pre_commit_hooks.ament_cpplint:main
    ament_flake8 = ament_lint_pre_commit_hooks.ament_flake8:main
    ament_lint_cmake = ament_lint_pre_commit_hooks.ament_lint_cmake:main
    ament_mypy = ament_lint_pre_commit_hooks.ament_mypy:main
    ament_pep257 = ament_lint_pre_commit_hooks.ament_pep257:main
    ament_uncrustify = ament_lint_pre_commit_hooks.ament_uncrustify:main
    ament_xmllint = ament_lint_pre_commit_hooks.ament_xmllint:main

[mypy]
explicit_package_bases = true

[mypy-pydocstyle.*]
ignore_missing_imports = true

[mypy-docker]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true
